# Adafruit_CircuitPython_ICN6211

./: LICENSE  README.md  README.rst  README.rst.license  adafruit_icn6211.py  optional_requirements.txt  pyproject.toml  requirements.txt
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: icn6211_simpletest.py
